--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.12.7",
     "mobx": "^6.13.6",
     "mobx-react-lite": "^4.1.0",
     "next": "15.1.6",
